# Object-Recognition

./: README.md
Demo Material/: kinect-training-set-labels.txt
VIproject/: README.md  VIproject.py  pyproject.toml
VIproject/Example1/: flake.nix  pyproject.toml
VIproject/Example1/vi2024_pythonpackage/: kinect-training-set-labels.txt  simple_player.py
