[tool.poetry]
name = "VI2024-PythonPackage"
version = "0.1.0"
description = ""
authors = ["YOUR NAME <YOUR EMAIL>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-kinect-video-player = {git = "https://github.com/JonBoyleCoding/python-azure-kinect-video-player.git", rev = "v0.2.5"}
scikit-learn = "^1.2.1"
opencv-python = "^4.9.0.80"
typer = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
simple-player = "vi2024_pythonpackage.simple_player:app"
